# llm-tui

./: .env  .gitignore  README.md  pyproject.toml  pyrightconfig.json
llm_tui/: constants.py  main.py  utils.py
llm_tui/llm_api/: llm_api.py
llm_tui/tui/: tui.py
