[tool.poetry]
name = "1c-rarus-test-case"
version = "0.1.0"
description = ""
authors = ["roofspirit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
requests = "^2.32.3"
rich = "^13.9.4"
sseclient-py = "^1.8.0"
certifi = "^2024.8.30"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
